...
        android:layout_height="wrap_content"
        android:paddingBottom="24dp"
        app:layout_anchor="@+id/patient_form_activity_save_fab"
        app:layout_anchorGravity="top|center">

...

                <TextView
                    android:id="@+id/patient_form_activity_personal_data_name_mandatory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    app:layout_constraintBottom_toBottomOf="@+id/patient_form_activity_personal_data_name_title"
                    app:layout_constraintStart_toEndOf="@+id/patient_form_activity_personal_data_name_title"
                    app:layout_constraintTop_toTopOf="@+id/patient_form_activity_personal_data_name" />

                <EditText
...

                <Spinner
                    android:id="@+id/patient_form_activity_personal_data_gender_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/patient_form_activity_personal_data_birthday_mandatory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    app:layout_constraintBottom_toBottomOf="@+id/patient_form_activity_personal_data_birthday_title"
                    app:layout_constraintStart_toEndOf="@+id/patient_form_activity_personal_data_birthday_title"
                    app:layout_constraintTop_toTopOf="@+id/patient_form_activity_personal_data_birthday" />
                <EditText
                    android:id="@+id/patient_form_activity_personal_data_birthday"
...

                <EditText
                    android:id="@+id/patient_form_activity_personal_data_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/patient_form_activity_personal_data_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <Spinner
                    android:id="@+id/patient_form_activity_personal_data_clinic_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/patient_form_activity_anthropometry_height_mandatory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    app:layout_constraintBottom_toBottomOf="@+id/patient_form_activity_anthropometry_height_title"
                    app:layout_constraintStart_toEndOf="@+id/patient_form_activity_anthropometry_height_title"
                    app:layout_constraintTop_toTopOf="@+id/patient_form_activity_anthropometry_height" />

                <EditText
...

                <TextView
                    android:id="@+id/patient_form_activity_anthropometry_weight_current_mandatory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    app:layout_constraintBottom_toBottomOf="@+id/patient_form_activity_anthropometry_weight_current_title"
                    app:layout_constraintStart_toEndOf="@+id/patient_form_activity_anthropometry_weight_current_title"
                    app:layout_constraintTop_toTopOf="@+id/patient_form_activity_anthropometry_weight_current" />

                <EditText
...
                    app:layout_constraintBottom_toBottomOf="@+id/patient_form_activity_anthropometry_weight_ideal_title"
                    app:layout_constraintStart_toEndOf="@+id/patient_form_activity_anthropometry_weight_ideal_title"
                    app:layout_constraintTop_toTopOf="@+id/patient_form_activity_anthropometry_weight_ideal" />

                <EditText
...

                <EditText
                    android:id="@+id/patient_form_activity_anthropometry_circum_arm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/patient_form_activity_anthropometry_circum_thigh"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/patient_form_activity_anthropometry_circum_abdomen"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/patient_form_activity_anthropometry_circum_waist"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/patient_form_activity_anthropometry_circum_hip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <LinearLayout
                    android:id="@+id/patient_form_activity_pathological_layout_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/patient_form_activity_observation"
                android:layout_width="0dp"
                android:layout_height="100dp"
...

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/patient_form_activity_nav_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

    <TextView
        android:id="@+id/patient_form_activity_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_blank"
        android:textColor="@color/obrigatorio"
        android:translationY="-10dp"
...
