...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/pop_up_patologia_description_formulario_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="patologia atual:"
            android:contentDescription="@string/type_of_pathology_content"
            android:labelFor="@+id/pop_up_patologia_description_formulario_editText"/>

        <MultiAutoCompleteTextView
            android:id="@+id/pop_up_patologia_description_formulario_editText"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
...
